syntax = "proto3";

import 'orders.proto';
import "google/protobuf/empty.proto";

package orders;

option java_multiple_files = true;
option java_package = "org.gangel.orders.proto";
option java_outer_classname = "OrdersProto";

message SetOfIds {
	repeated int64 ids = 1;	
}

service CustomerService {
	// unary calls
	rpc CreateNewCustomer(NewCustomerRequest) returns (NewCustomerResponse) {}
	rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse) {}
	rpc GetCustomerIds(google.protobuf.Empty) returns (SetOfIds) {} 
	
	// server stream
	rpc GetCustomerOrders(GetCustomerOrdersRequest) returns (stream GetCustomerOrdersResponse) {}
	
	// client stream
	rpc UpdateCustomers(stream NewCustomerRequest) returns (google.protobuf.Empty) {}
	
	// bidirectional streaming
	rpc CreateNewCustomers(stream NewCustomerRequest) returns (stream NewCustomerResponse) {}
}

service ProductService {
	rpc CreateNewProduct(NewProductRequest) returns (NewProductResponse) {}
	rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}	
}

service OrdersService {
	rpc AddNewOrder(NewOrderRequest) returns (NewOrderResponse) {}
	rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}

	rpc Ping(PingRequest) returns (PingResponse) {}
	rpc Pings(stream PingRequest) returns (stream PingResponse) {}
}

// --------------------------
message PingRequest {
}

message PingResponse {
	string response = 1;
}

// --------------------------
message NewCustomerRequest {
	Customer customer = 1;
}
message NewCustomerResponse {
	int64 id = 1;
}

message GetCustomerRequest {
	int64 id = 1; 
}

message GetCustomerResponse {
	Customer customer = 1;
}

message GetCustomerOrdersRequest {
	int64 customerId = 1;
}

message GetCustomerOrdersResponse {
	Orders orders = 1;
}

// --------------------------
message NewProductRequest {
	Product product = 1;
}

message NewProductResponse {
	int64 id = 1;
}

message GetProductRequest {
	int64 id = 1;
}

message GetProductResponse {
	Product product = 1; 
}

// --------------------------
message NewOrderRequest {
	Orders orders = 1; 
}

message NewOrderResponse {
	int64 id = 1; 
}

message GetOrderRequest {
	int64 id = 1; 
}

message GetOrderResponse {
	Orders orders = 1; 
}
